[gd_scene load_steps=3 format=2]

[ext_resource path="res://sayhello.gd" type="Script" id=1]
[ext_resource path="res://framerateLabel2.gd" type="Script" id=2]

[node name="Panel" type="Panel"]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Label0" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "Hello"

[node name="Button1" type="Button" parent="."]
margin_left = 14.7651
margin_top = 19.4698
margin_right = 26.7651
margin_bottom = 39.4698

[node name="Label2" type="Label" parent="." groups=[
"labels",
]]
margin_left = 44.4347
margin_top = 2.50168
margin_right = 84.4347
margin_bottom = 16.5017
script = ExtResource( 2 )

[node name="Label3" type="Label" parent="."]
margin_left = 43.4816
margin_top = 15.1292
margin_right = 83.4816
margin_bottom = 29.1292
script = ExtResource( 2 )
[connection signal="pressed" from="Button1" to="." method="_on_Button_pressed"]
